--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello!</h1>
+<p>My name is Aditya.</p>
+<p>I am an artist and investor</p>
+<p>My hobbies include golf, board games, swimming, cycling & bridge</p>
+
+<p>For investment advice I can be reached at <a href="www.pantheracapita.in">Panthera Capital</a></p>
+<p>For digital art I can be reached at <a href="http://zaqijo.deviantart.com">Deviantart</a></p>
 </body>
 </html>
