--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <body>
 <h1>Hello!</h1>
 <p>My name is Aditya.</p>
-<p>I am an artist and investor</p>
-<p>My hobbies include golf, board games, swimming, cycling & bridge</p>
-
-<p>For investment advice I can be reached at <a href="www.pantheracapita.in">Panthera Capital</a></p>
-<p>For digital art I can be reached at <a href="http://zaqijo.deviantart.com">Deviantart</a></p>
+<p>I am an artist and investor.</p>
+<p>My hobbies include golf, board games, swimming, cycling & bridge.</p>
+<p>For <i>investment advice</i> I can be reached at <a href="www.pantheracapital.in">Panthera Capital</a>.</p>
+<p>For <i>digital art</i> I can be reached at <a href="http://zaqijo.deviantart.com">Deviantart</a>.</p>
 </body>
 </html>
