--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <p>For <i>professional investment advice</i> I can be reached at <a href="http://www.pantheracapital.in">Panthera Capital</a>.</p>
 <p>You can view my <i>photographs</i> at <a href="http://www.flickr.com/photos/zaqijo/">Flickr</a>.</p>
 <p>For <i>digital art</i> I can be reached at <a href="http://zaqijo.deviantart.com">Deviantart</a>.</p>
-<p>You can view my <i>digital multimedia</i> at <a href="http://vimeo.com/user26692814">Vimeo</a></p>
+<p>You can view my <i>digital multimedia</i> at <a href="http://vimeo.com/user26692814">Vimeo</a>.</p>
 <p>I make simple <i>beats and music</i> at <a href="http://soundcloud.com/user386792855">SoundCloud</a>.</p>
 <p>You can subscribe to my <i>newsletter</i> at <a href="http://www.tinyletters/adityag">Tinyletters</a>.</p>
 </body>
