--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 <h1>Hello!</h1>
 <p>My name is Aditya.</p>
-<p>I am an <b>artist</b> and <b>investor</b>.</p>
+<p>I am an <b>artist</b>, a <b>student</b>, and an <b>investor</b>.</p>
 <p>My hobbies include billiards, board games, bridge, cycling, golf, swimming, and yoga.</p>
 <p>For <i>professional investment advice</i> I can be reached at <a href="http://www.pantheracapital.in">Panthera Capital</a>.</p>
 <p>You can view my <i>photographs</i> at <a href="http://www.flickr.com/photos/zaqijo/">Flickr</a>.</p>
