--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <p>For <i>digital art</i> I can be reached at <a href="http://zaqijo.deviantart.com">Deviantart</a>.</p>
 <p>You can view my <i>digital multimedia</i> at <a href="http://vimeo.com/user26692814">Vimeo</a>.</p>
 <p>I make simple <i>beats and music</i> at <a href="http://soundcloud.com/user386792855">SoundCloud</a>.</p>
-<p>You can subscribe to my <i>newsletter</i> at <a href="http://www.tinyletter.com/adityag/">Tinyletter</a>.</p>
+<p>I write a <i>newsletter</i> which you can subscribe at <a href="http://www.tinyletter.com/adityag/">Tinyletter</a>.</p>
 </body>
 </html>
