--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello!</h1>
 <p>My name is Aditya.</p>
 <p>I am an <b>artist</b>, <b>investor</b>, and <b>student</b>.</p>
-<p>For financial advice, you can contact me through <a href="http://twitter.com/pantheracap/">Twitter.</a></p>
+<p>For financial advice, you can contact me through <a href="http://twitter.com/pantheracap/">Twitter</a>.</p>
 <p>You can view my <i>photographs</i> at <a href="http://www.flickr.com/photos/zaqijo/">Flickr</a>.</p>
 <p>For <i>digital art</i> I can be reached at <a href="http://zaqijo.deviantart.com">Deviantart</a>.</p>
 <p>You can view my <i>digital multimedia</i> at <a href="http://vimeo.com/user26692814">Vimeo</a>.</p>
