--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h1>Hello!</h1>
-<p>My name is Aditya.</p>
+<p>My name is <b>Aditya</b>.</p>
 <p>I am an <b>artist</b>, <b>investor</b>, and <b>student</b>.</p>
 <p>For financial advice, you can contact me through <a href="http://www.pantheracapital.in/">Panthera Capital</a>.</p>
 <p>You can view my <i>photographs</i> at <a href="http://www.flickr.com/photos/zaqijo/">Flickr</a>.</p>
