--- a/index.html
+++ b/index.html
@@ -2,13 +2,8 @@
 <html>
 <body>
 <h1>Hello!</h1>
-<p>My name is <b>Aditya</b>.</p>
+<p>I am <b>Aditya</b>.</p>
 <p>I am an <b>artist</b>, <b>investor</b>, and <b>student</b>.</p>
-<p>For financial advice, you can contact me through <a href="http://www.pantheracapital.in/">Panthera Capital</a>.</p>
-<p>You can view my <i>photographs</i> at <a href="http://www.flickr.com/photos/zaqijo/">Flickr</a>.</p>
-<p>For <i>digital art</i> I can be reached at <a href="http://zaqijo.deviantart.com">Deviantart</a>.</p>
-<p>You can view my <i>digital multimedia</i> at <a href="http://vimeo.com/user26692814">Vimeo</a>.</p>
-<p>I make simple <i>beats and music</i> at <a href="http://soundcloud.com/user386792855">SoundCloud</a>.</p>
-<p>I write a <i>newsletter</i> which you can subscribe at <a href="http://www.tinyletter.com/adityag/">Tinyletter</a>.</p>
+<a href="http://www.pantheracapital.in/">Panthera Capital</a>.<a href="http://www.flickr.com/photos/zaqijo/">Flickr</a>.<a href="http://zaqijo.deviantart.com">Deviantart</a>.<a href="http://vimeo.com/user26692814">Vimeo</a>.<a href="http://soundcloud.com/user386792855">SoundCloud</a>.<a href="http://www.tinyletter.com/adityag/">Tinyletter</a>.</p>
 </body>
 </html>
