--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <body>
 <h1>Hello!</h1>
 <p>I am <b>Aditya</b>.</p>
-<p>I am an <b>artist</b>, <b>investor</b>, and <b>student</b>.</p>
+<p>I am an <b>artist</b>.
+<p>I am an <b>investor</b>.
+<p>I am a <b>student</b>.
 </body>
 </html>
