--- a/index.html
+++ b/index.html
@@ -6,5 +6,8 @@
 <p>I am an <b>artist</b>.
 <p>I am an <b>investor</b>.
 <p>I am a <b>student</b>.
+<p>I am a SEBI-registered <b>Invesement Adviser</b>
+
+You may contact me at info at pantheracapital dot in
 </body>
 </html>
