--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <p>I am a <b>student</b>.
 <p>I am a SEBI-registered <b>Invesement Adviser</b>
 
-You may contact me at info at pantheracapital dot in
+<p>You may contact me at info at pantheracapital dot in
 </body>
 </html>
