--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <body>
 <h1>Hello!</h1>
 <p>I am <b>Aditya</b>.</p>
-<p>I am an <b>artist</b>.
-<p>I am an <b>investor</b>.
-<p>I am a <b>student</b>.
-<p>I am a SEBI-registered <b>Invesement Adviser</b>
-
-<p>You may contact me at info at pantheracapital dot in
+<p>I am an <b>artist</b>. I am a <b>writer</b>. I am a <b>student & connoisseur</b> of life.</p>
+<p>I am a SEBI-registered <b>Invesement Advisor</b></p>
+<p>I advise families & individuals on <b>asset allocation, wealth creation & wealth protection</b></p>
+<p></br>
+<p>My <b>hobbies</b> include bridge, golf, swimming, philately, squash, tabletop games</p>
+<p>I consume a fair amount of <b>media & books</b></p>
+<p>I <b>sell</b> old stuff</p>
+<p></br>
 </body>
 </html>
