--- a/index.html
+++ b/index.html
@@ -2,14 +2,11 @@
 <html>
 <body>
 <h1>Hello!</h1>
-<p>I am <b>Aditya</b>.</p>
-<p>I am an <b>artist</b>. I am a <b>writer</b>. I am a <b>student & connoisseur</b> of life.</p>
-<p>I am a SEBI-registered <b>Invesement Advisor</b></p>
-<p>I advise families & individuals on <b>asset allocation, wealth creation & wealth protection</b></p>
-<p></br>
+<p>I am an <b>artist</b>, <b>writer</b>, <b>student</b>, and <b>connoisseur</b> of life</p>
+<p>I am a SEBI-registered <b>Invesement Advisor</b>. I advise families & individuals on <b>asset allocation, wealth creation & wealth protection</b></p>
 <p>My <b>hobbies</b> include bridge, golf, swimming, philately, squash, tabletop games</p>
-<p>I consume a fair amount of <b>media & books</b></p>
-<p>I <b>sell</b> old stuff</p>
+<p>My <b>media & books</b>diet can be found here</p>
+<p>I <b>sell</b> old stuff as well</p>
 <p></br>
 </body>
 </html>
