--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 <h1>Hello!</h1>
-<p>I am a SEBI-registered <b>Investment Advisor</b>. I advise families & individuals on <b>financial matters</b></p>
-<p>I am a <b>visual artist</b>, <b>writer</b>, and <b>connoisseur</b> of life</p>
-<p>My <b>hobbies</b> include bridge, golf, swimming, philately, squash, tabletop games</p>
+<p>I am a <b>CERTIFIED FINANCIAL PLANNER™</b> and a SEBI-registered <b>Investment Advisor</b>. I advise families & individuals on <b>financial matters</b></p>
+<p>I am also a <b>visual artist</b>, <b>writer</b>, and <b>connoisseur</b> of life</p>
+<p>My <b>hobbies</b> include bridge, golf, swimming, squash, tabletop games</p>
 <p>My <b>media & books</b> diet can be found here ...</p>
 <p>I <b>sell</b> old stuff as well over here ...</p>
 <p></br>
