--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <body>
 <h1>Adi's World</h1>
 <p>trusted fiduciary / financial planner / autodidact / artist / storyteller</p>
-<p>financial planning: <a href="https://www.pantheracapital.in"><panthera.financial.advisory></a></p>
-<p>art: <a href="https://adityag.netlify.app"><aditya.photos></a></p>
-<p>writing: <a href="https://buttondown.email/adityag"><Quixotic.Musings></a></p>
-<p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj"><LinkedIn></a></p>
+<p>financial planning: <a href="https://www.pantheracapital.in">panthera.financial.advisory</a></p>
+<p>art: <a href="https://adityag.netlify.app">aditya.photos</a></p>
+<p>writing: <a href="https://buttondown.email/adityag">Quixotic.Musings</a></p>
+<p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj">LinkedIn</a></p>
 <p>i am interested in working in a boutique wealth management/family office firm. if you know any open positions in this space, or anyone interested in hiring a competent all-round financial advisor/wealth manager, do let me know!</p>
 </body>
 </html>
