--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <body>
 <h1>Adi's World</h1>
 <p>trusted fiduciary / financial planner / autodidact / artist / storyteller</p>
+
+<p>My name is Aditya and I'm a Certified Financial Planner (CFP) and SEBI-Registered Investment Adviser (RIA).</p>
+
+<p>I'm a fiduciary and I help clients manage finances, investments, asset allocation, & goals for a fee.</p>
+
+<p>I live in <bold>Madras</bold>, and have lived here most of my life; It's place known for arts, temples, dosas;
+<p>I'm an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;</p>
+<p>I'm a seasoned <b>swimmer</b> and an avid golfer</b>; I also play <b>bridge</b> using SAYC convention;</p>
+<p>I'm into <b>cue sports</b>, mostly <b>billiards</b>; I'm a hardcore <b>tabletop gamer</b> with emphasis on Euro board games;</p>
+<p>I indulge in <b>photography</b> -- mostly street, abstract, and portraiture; I also create <b>vector</b> & <b>raster</b> art;</p>
+
+<p>I'm also the sole proprietor of Panthera Financial Advisory - a one-person powerhouse for all your investment & financial needs.<p>
+
+<p>You can find me at these places below:</p>
 <p>financial planning: <a href="https://www.pantheracapital.in">panthera.financial.advisory</a></p>
 <p>art: <a href="https://adityag.netlify.app">aditya.photos</a></p>
 <p>writing: <a href="https://buttondown.email/adityag">Quixotic.Musings</a></p>
 <p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj">LinkedIn</a></p>
-<p>i am interested in working in a boutique wealth management/family office firm. if you know any open positions in this space, or anyone interested in hiring a competent all-round financial advisor/wealth manager, do let me know!</p>
-</body>
 </html>
