--- a/index.html
+++ b/index.html
@@ -4,13 +4,10 @@
 <h1>Adi's World</h1>
 <p>trusted fiduciary / financial planner / autodidact / artist / storyteller</p>
 
-<p>My name is Aditya and I'm a Certified Financial Planner (CFP) and SEBI-Registered Investment Adviser (RIA).</p>
-
-<p>I'm a fiduciary and I help clients manage finances, investments, asset allocation, & goals for a fee.</p>
-
-<p>I live in <bold>Madras</bold>, and have lived here most of my life; It's place known for arts, temples, dosas;
+<p>My name is <b><h5>Aditya</h5></b> and I'm a <b>Certified Financial Planner (CFP)</b> and <b>SEBI-Registered Investment Adviser (RIA)</b>.</p>
+<p>I live in <b>Madras</b>, and have lived here most of my life; It's place known for arts, temples, dosas;</p>
 <p>I'm an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;</p>
-<p>I'm a seasoned <b>swimmer</b> and an avid golfer</b>; I also play <b>bridge</b> using SAYC convention;</p>
+<p>I'm a seasoned <b>swimmer</b> and an avid <b>golfer</b>; I also play <b>bridge</b> using SAYC convention;</p>
 <p>I'm into <b>cue sports</b>, mostly <b>billiards</b>; I'm a hardcore <b>tabletop gamer</b> with emphasis on Euro board games;</p>
 <p>I indulge in <b>photography</b> -- mostly street, abstract, and portraiture; I also create <b>vector</b> & <b>raster</b> art;</p>
 
