--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Adi's World</h1>
 <p>trusted fiduciary / financial planner / autodidact / artist / storyteller</p>
 
-<p>My name is <b><h5>Aditya</h5></b> and I'm a <b>Certified Financial Planner (CFP)</b> and <b>SEBI-Registered Investment Adviser (RIA)</b>.</p>
+<p>My name is <b>Aditya</b> and I'm a <b>Certified Financial Planner (CFP)</b> and <b>SEBI-Registered Investment Adviser (RIA)</b>.</p>
 <p>I live in <b>Madras</b>, and have lived here most of my life; It's place known for arts, temples, dosas;</p>
 <p>I'm an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;</p>
 <p>I'm a seasoned <b>swimmer</b> and an avid <b>golfer</b>; I also play <b>bridge</b> using SAYC convention;</p>
