--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Adi's World</h1>
-<p>trusted fiduciary / financial planner / autodidact / artist / storyteller</p>
+<script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
+# Adi's World
+### trusted fiduciary / financial planner / autodidact / artist / storyteller
 
-<p>My name is <b>Aditya</b> and I'm a <b>Certified Financial Planner (CFP)</b> and <b>SEBI-Registered Investment Adviser (RIA)</b>.</p>
-<p>I live in <b>Madras</b>, and have lived here most of my life; It's place known for arts, temples, dosas;</p>
-<p>I'm an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;</p>
-<p>I'm a seasoned <b>swimmer</b> and an avid <b>golfer</b>; I also play <b>bridge</b> using SAYC convention;</p>
-<p>I'm into <b>cue sports</b>, mostly <b>billiards</b>; I'm a hardcore <b>tabletop gamer</b> with emphasis on Euro board games;</p>
-<p>I indulge in <b>photography</b> -- mostly street, abstract, and portraiture; I also create <b>vector</b> & <b>raster</b> art;</p>
+My name is <b>Aditya</b> and I'm a Certified Financial Planner (CFP) and SEBI-Registered Investment Adviser (RIA).
 
-<p>I'm also the sole proprietor of Panthera Financial Advisory - a one-person powerhouse for all your investment & financial needs.<p>
+I'm a <i>fiduciary</i> and I help clients manage finances, investments, asset allocation, & goals for a fee.
 
-<p>You can find me at these places below:</p>
+I live in <b>Madras,</b> and have lived here most of my life; It's place known for arts, temples, <i>dosas</i>;
+I'm an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;
+I'm a <b>bookworm</b> and own a decent collection of books;
+I'm a seasoned <b>swimmer</b> and an avid <b>golfer</b>; I also play <b>bridge</b> using SAYC convention;
+I'm into <b>cue sports</b>, mostly billiards; I'm a hardcore <b>tabletop gamer</b> with emphasis on Euro board games;
+I indulge in <b>photography</b> -- mostly street, abstract, and portraiture; I also create <b>vector</b> & <b>raster</b> art;
+
+I'm also the sole proprietor of <b>Panthera Financial Advisory</b> - a one-person powerhouse for all your investment & financial needs.
+
+### You can find me at these places below:
 <p>financial planning: <a href="https://www.pantheracapital.in">panthera.financial.advisory</a></p>
 <p>art: <a href="https://adityag.netlify.app">aditya.photos</a></p>
 <p>writing: <a href="https://buttondown.email/adityag">Quixotic.Musings</a></p>
 <p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj">LinkedIn</a></p>
-</html>
