--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 # Adi's World
 ### trusted fiduciary / financial planner / autodidact / artist / storyteller
 
-My name is <b>Aditya</b> and I'm a Certified Financial Planner (CFP) and SEBI-Registered Investment Adviser (RIA).
-
-I'm a <i>fiduciary</i> and I help clients manage finances, investments, asset allocation, & goals for a fee.
-
 I live in <b>Madras,</b> and have lived here most of my life; It's place known for arts, temples, <i>dosas</i>;
 I'm an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;
 I'm a <b>bookworm</b> and own a decent collection of books;
 I'm a seasoned <b>swimmer</b> and an avid <b>golfer</b>; I also play <b>bridge</b> using SAYC convention;
 I'm into <b>cue sports</b>, mostly billiards; I'm a hardcore <b>tabletop gamer</b> with emphasis on Euro board games;
 I indulge in <b>photography</b> -- mostly street, abstract, and portraiture; I also create <b>vector</b> & <b>raster</b> art;
-
-I'm also the sole proprietor of <b>Panthera Financial Advisory</b> - a one-person powerhouse for all your investment & financial needs.
+I make a living by investing on my own and being a <b>fiduciary & financial planner</b> at <b>panthera financial advisory</b>
 
 ### You can find me at these places below:
 <p>financial planning: <a href="https://www.pantheracapital.in">panthera.financial.advisory</a></p>
