--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
-# Adi's World
+# aditya g
 ### trusted fiduciary / financial planner / autodidact / artist / storyteller
 
-I live in <b>Madras,</b> and have lived here most of my life; It's place known for arts, temples, <i>dosas</i>;
-I'm an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;
-I'm a <b>bookworm</b> and own a decent collection of books;
-I'm a seasoned <b>swimmer</b> and an avid <b>golfer</b>; I also play <b>bridge</b> using SAYC convention;
-I'm into <b>cue sports</b>, mostly billiards; I'm a hardcore <b>tabletop gamer</b> with emphasis on Euro board games;
-I indulge in <b>photography</b> -- mostly street, abstract, and portraiture; I also create <b>vector</b> & <b>raster</b> art;
-I make a living by investing on my own and being a <b>fiduciary & financial planner</b> at <b>panthera financial advisory</b>
+i live in <b>Madras</b>, and have lived here most of my life; it is a place known for kutcheris, temples, dosas;
+i am an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;
+i <b>read a lot</b> and own a decent collection of books; i also write a <b>newsletter</b>;
+i am a seasoned <b>swimmer</b> and an avid <b>golfer</b>, and a casual <b>bridge</b> player;
+i am into <b>cue sports</b> as well, mostly billiards; i am a hardcore <b>tabletop gamer</b> with emphasis on Euro board games;
+i also indulge in <b>photography</b> -- mostly street, abstract, and portraiture; i also create <b>vector</b> & <b>raster</b> art;
+i make a living by investing on my own and being a <b>fiduciary & financial planner</b> at <b>panthera financial advisory</b>.
 
-### You can find me at these places below:
+### You can find me at any one of these places mentioned below:
 <p>financial planning: <a href="https://www.pantheracapital.in">panthera.financial.advisory</a></p>
 <p>art: <a href="https://adityag.netlify.app">aditya.photos</a></p>
-<p>writing: <a href="https://buttondown.email/adityag">Quixotic.Musings</a></p>
-<p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj">LinkedIn</a></p>
+<p>writing: <a href="https://buttondown.email/adityag">quixotic.musings</a></p>
+<p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj">linkedin</a></p> 
