--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 i live in <b>Madras</b>, and have lived here most of my life; it is a place known for kutcheris, temples, dosas;
 i am an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;
 i <b>read a lot</b> and own a decent collection of books; i also write a <b>newsletter</b>;
-i am a seasoned <b>swimmer</b> and an avid <b>golfer</b>, and a casual <b>bridge</b> player;
+i am a seasoned <b>swimmer</b>, an avid <b>golfer</b>, and a casual <b>bridge</b> player;
 i am into <b>cue sports</b> as well, mostly billiards; i am a hardcore <b>tabletop gamer</b> with emphasis on Euro board games;
 i also indulge in <b>photography</b> -- mostly street, abstract, and portraiture; i also create <b>vector</b> & <b>raster</b> art;
 i make a living by investing on my own and being a <b>fiduciary & financial planner</b> at <b>panthera financial advisory</b>.
@@ -14,4 +14,4 @@ i make a living by investing on my own and being a <b>fiduciary & financial plan
 <p>financial planning: <a href="https://www.pantheracapital.in">panthera.financial.advisory</a></p>
 <p>art: <a href="https://adityag.netlify.app">aditya.photos</a></p>
 <p>writing: <a href="https://buttondown.email/adityag">quixotic.musings</a></p>
-<p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj">linkedin</a></p> 
+<p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj">linkedin</a></p>
