--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ i also indulge in <b>photography</b> -- mostly street, abstract, and portraiture
 i make a living by investing on my own and being a <b>fiduciary & financial planner</b> at <b>panthera financial advisory</b>.
 
 ### You can find me at any one of these places mentioned below:
-<p>financial planning: <a href="https://www.pantheracapital.in">panthera.financial.advisory</a></p>
-<p>art: <a href="https://adityag.netlify.app">aditya.photos</a></p>
-<p>writing: <a href="https://buttondown.email/adityag">quixotic.musings</a></p>
-<p>resume: <a href="https://www.linkedin.com/in/adityagovindaraj">linkedin</a></p>
+financial planning: [panthera.financial.advisory](https://www.pantheracapital.in)
+art: [aditya.photos](https://adityag.netlify.app)
+writing: [quixotic.musings](https://buttondown.email/adityag)
+CV: [linkedin](https://www.linkedin.com/in/adityagovindaraj)
