--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ i am into <b>cue sports</b> as well, mostly billiards; i am a hardcore <b>tablet
 i also indulge in <b>photography</b> -- mostly street, abstract, and portraiture; i also create <b>vector</b> & <b>raster</b> art;
 i make a living by investing on my own and being a <b>fiduciary & financial planner</b> at <b>panthera financial advisory</b>.
 
-links:
+####links:
 financial planning: [panthera.financial.advisory](https://www.pantheracapital.in)
 art: [aditya.photos](https://adityag.netlify.app)
 writing: [quixotic.musings](https://buttondown.email/adityag)
