--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ i earn my bread <b>investing</b> in capital markets on my own, and being a <b>fi
 financial planning: [panthera.financial.advisory](https://www.pantheracapital.in)
 writing: [quixotic.musings](https://buttondown.email/adityag)
 art: [aditya.photos](https://adityag.netlify.app)
-CV: [linkedin](https://www.linkedin.com/in/adityagovindaraj)
+cv: [linkedin](https://www.linkedin.com/in/adityagovindaraj)
