--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 # aditya g
 ### trusted fiduciary / financial planner / autodidact / artist / storyteller
 
-i live in <b>Madras</b>, and have lived here most of my life; it is a place known for kutcheris, temples, dosas;
+i live in <b>madras</b>, and have lived here most of my life; it is a place known for kutcheris, temples, dosas;
 i am an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;
 i <b>read a lot</b> and own a decent collection of books; i also write a <b>newsletter</b>;
 i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, casual <b>bridge</b> player, and hardcore <b>tabletop</b> gamer;
