--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ i am an <b>autodidact</b> and love acquiring skills & sophisticated knowledge;
 i <b>read a lot</b> and own a decent collection of books; i also write a <b>newsletter</b>;
 i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, casual <b>bridge</b> player, and hardcore <b>tabletop</b> gamer;
 i also indulge in <b>photography</b> -- street, abstract, and portraiture, as well as <b>vector</b> & <b>raster</b> art;
-i earn my bread <b>investing</b> in capital markets on my own, and being a <b>fiduciary & financial planner</b>.
+i earn my bread <b>investing</b> in capital markets on my own, <b>helping others</b> achieve their goals through my <b>fiduciary & financial planner</b> practice.
 
 #### links:
 financial planning: [panthera.financial.advisory](https://www.pantheracapital.in)
