--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@ i earn my bread <b>investing</b> in capital markets on my own, helping others ac
 financial planning: [panthera.financial.advisory](https://www.pantheracapital.in)
 writing: [quixotic.musings](https://buttondown.email/adityag)
 art: [aditya.photos](https://adityag.netlify.app)
+github: [aditya](https://github.com/adityag81)
 cv: [linkedin](https://www.linkedin.com/in/adityagovindaraj)
