--- a/index.html
+++ b/index.html
@@ -15,3 +15,5 @@ writing: [quixotic.musings](https://buttondown.email/adityag)
 art: [aditya.photos](https://adityag.netlify.app)
 github: [aditya](https://github.com/adityag81)
 cv: [linkedin](https://www.linkedin.com/in/adityagovindaraj)
+
+<img src="https://avatars3.githubusercontent.com/u/13433335?s=400&u=45b2a2e007dd310ba581295892d77dcffc4ba866&v=4" STYLE="position:absolute Right:30px;BOTTOM:30px">
