--- a/index.html
+++ b/index.html
@@ -16,4 +16,4 @@ art: [aditya.photos](https://adityag.netlify.app)
 github: [aditya](https://github.com/adityag81)
 cv: [linkedin](https://www.linkedin.com/in/adityagovindaraj)
 
-<img src="https://avatars3.githubusercontent.com/u/13433335?s=400&u=45b2a2e007dd310ba581295892d77dcffc4ba866&v=4" STYLE="position:absolute;RIGHT:30px;BOTTOM:30px;HEIGHT:500px">
+<img src="https://avatars3.githubusercontent.com/u/13433335?s=400&u=45b2a2e007dd310ba581295892d77dcffc4ba866&v=4" STYLE="position:absolute;RIGHT:30px;BOTTOM:30px;HEIGHT:25%;WIDTH:25%">
