--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 ### trusted fiduciary / financial planner / autodidact / artist / storyteller
 
 i earn my bread <b>investing</b> in capital markets on my own, helping others achieve their goals through <b>financial planning</b>
-i live in <b>madras</b>, and have lived here most of my life; it is a place known for kutcheris, temples, dosas
-i indulge in <b>photography</b> - street, abstract, and portraiture, as well as <b>vector</b> & <b>raster</b> art
+i live in <b>madras</b>, and have lived here most of my life; this southern port city is known for kutcheris, temples, dosas
+i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
 i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, and hardcore <b>tabletop</b> gamer
 i am a <b>bookworm</b> and own a decent collection of books; i also write a <b>newsletter</b>
-i am an <b>autodidact</b> and love acquiring skills & sophisticated knowledge
+i am also an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing.
 
 #### links:
 financial planning: [panthera.financial.advisory](https://www.pantheracapital.in)
