--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ i live in <b>madras</b>, and have lived here most of my life; this southern port
 i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
 i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, and hardcore <b>tabletop</b> gamer
 i am a <b>bookworm</b> and own a decent collection of books; i also write a <b>newsletter</b>
-i am also an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing.
+i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing.
 
 #### links:
 financial planning: [panthera.financial.advisory](https://www.pantheracapital.in)
