--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ### trusted fiduciary / financial planner / autodidact / artist / storyteller
 
 i earn my bread <b>investing</b> in capital markets on my own, and help others through <b>financial planning</b>
-i live in <b>madras</b>/chennai, a southern Indian port city known for kutcheris, temples, and thayir sadam
+i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, temples, and thayir sadam
 i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
 i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, and hardcore <b>tabletop</b> gamer
 i am a <b>bookworm</b> and own a decent collection of books; i also write a <b>newsletter</b>
