--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 # aditya g
-### trusted fiduciary / financial planner / autodidact / artist / storyteller
+### trusted fiduciary / financial planner / artist / storyteller / autodidact
 
 i earn my bread <b>investing</b> in capital markets on my own, and help others through <b>financial planning</b>
 i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, temples, and thayir sadam
@@ -9,12 +9,6 @@ i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, and har
 i am a <b>bookworm</b> and own a decent collection of books; i also write a <b>newsletter</b>
 i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing
 
-
-#### links:
-cv: [linkedin](https://www.linkedin.com/in/adityagovindaraj)
-github: [aditya](https://github.com/adityag81)
-art: [aditya.photos](https://adityag.netlify.app)
-writing: [quixotic.musings](https://buttondown.email/adityag)
-financial planning: [panthera.financial.advisory](https://www.pantheracapital.in)
+[resume](https://www.linkedin.com/in/adityagovindaraj) / [github](https://github.com/adityag81) / [art](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [advisory](https://www.pantheracapital.in)
 
 <img src="https://avatars3.githubusercontent.com/u/13433335?s=400&u=45b2a2e007dd310ba581295892d77dcffc4ba866&v=4" STYLE="position:absolute;RIGHT:30px;BOTTOM:30px;HEIGHT:20%;WIDTH:auto;">
