--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, and har
 i am a <b>bookworm</b> and own a decent collection of books; i also write a <b>newsletter</b>
 i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing
 
-[resume](https://www.linkedin.com/in/adityagovindaraj) / [github](https://github.com/adityag81) / [art](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [advisory](https://www.pantheracapital.in)
+[resume](https://www.linkedin.com/in/adityagovindaraj) / [advisory](https://www.pantheracapital.in) / [github](https://github.com/adityag81) / [art](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
 
 <img src="https://avatars3.githubusercontent.com/u/13433335?s=400&u=45b2a2e007dd310ba581295892d77dcffc4ba866&v=4" STYLE="position:absolute;RIGHT:30px;BOTTOM:30px;HEIGHT:20%;WIDTH:auto;">
