--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ i earn my bread <b>investing</b> in capital markets on my own, and help others t
 i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, temples, and thayir sadam
 i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
 i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, and hardcore <b>tabletop</b> gamer
-i am a <b>bookworm</b> and own a decent collection of books; i also write a <b>newsletter</b>
 i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing
+i am a <b>book snob</b> and i also write a <b>newsletter</b>
 
 [resume](https://www.linkedin.com/in/adityagovindaraj) / [advisory](https://www.pantheracapital.in) / [github](https://github.com/adityag81) / [art](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
 
