--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 ### trusted fiduciary / financial planner / artist / storyteller / autodidact
 <br>
 i earn my bread <b>investing</b> in capital markets on my own, and help others through <b>financial planning</b>
-i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, temples, and thayir sadam
+i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, beaches, and thayir sadam
 i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
 i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, and hardcore <b>tabletop</b> gamer
 i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing
