--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 i earn my bread <b>investing</b> in capital markets on my own, and help others through <b>financial planning</b>
 i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, temples, and thayir sadam
 i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
-i am an avid <b>golfer</b> and <b>cueist</b>, a seasoned <b>swimmer</b>, and hardcore <b>tabletop</b> gamer
 i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing
+i am an avid <b>golfer</b>, seasoned <b>swimmer</b>, & hardcore <b>gamer</b>
 i am a <b>book snob</b> and i also write a <b>newsletter</b>
 
-[resume](https://www.linkedin.com/in/adityagovindaraj) / [advisory](https://www.pantheracapital.in) / [github](https://github.com/adityag81) / [art](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
+[resume](https://www.linkedin.com/in/adityagovindaraj) / [advisory](https://www.pantheracapital.in) / [photography](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
 
 <img src="https://avatars3.githubusercontent.com/u/13433335?s=400&u=45b2a2e007dd310ba581295892d77dcffc4ba866&v=4" STYLE="position:absolute;RIGHT:30px;BOTTOM:30px;HEIGHT:20%;WIDTH:auto;">
