--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 # aditya g
-### trusted fiduciary / financial planner / artist / storyteller / autodidact
+### trusted fiduciary / financial planner / artist / storyteller / problem solver / autodidact / father
 <br>
 i earn my bread <b>investing</b> in capital markets on my own, and help others through <b>financial planning</b>
 i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, beaches, and thayir sadam
