--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 # aditya g
-### trusted fiduciary / financial planner / artist / storyteller / problem solver / autodidact / father
+### trusted fiduciary / financial planner / artist / gamer / writer
 
 i earn my bread <b>investing</b> in capital markets on my own, and help others through <b>financial planning</b>
 i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, beaches, and thayir sadam
 i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
 i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing
-i am an avid <b>golfer</b>, seasoned <b>swimmer</b>, & hardcore <b>gamer</b>
+i am a hardcore <b>golfer</b> and an avid <b>gamer & sports fan</b>
 i am a <b>book snob</b> and i also write a <b>newsletter</b>
 
 [resume](https://www.linkedin.com/in/adityagovindaraj) / [photography](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
