--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ i earn my bread <b>investing</b> in capital markets on my own, and help others t
 i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, beaches, and thayir sadam
 i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
 i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing
-i am a hardcore <b>golfer</b> and an avid <b>gamer & sports fan</b>
+i am a hardcore <b>golfer</b> and an avid <b>gamer</b> & <b>sports</b> fan
 i am a <b>book snob</b> and i also write a <b>newsletter</b>
 
 [resume](https://www.linkedin.com/in/adityagovindaraj) / [photography](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
