--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@ i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-o
 i am a hardcore <b>golfer</b> and an avid <b>gamer</b> & <b>sports</b> fan
 i am a <b>book snob</b> and i also write a <b>newsletter</b>
 
-[resume](https://www.linkedin.com/in/adityagovindaraj) / [photography](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
+[resume](https://adityag81.github.io/resume/index.html) / [photography](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
 
 <img src="https://avatars3.githubusercontent.com/u/13433335?s=400&u=45b2a2e007dd310ba581295892d77dcffc4ba866&v=4" STYLE="position:absolute;RIGHT:30px;BOTTOM:30px;HEIGHT:20%;WIDTH:auto;">
