--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 # aditya g
-### trusted fiduciary / financial planner / artist / gamer / writer
+### trusted fiduciary / financial planner / investor / trader / artist / gamer / writer / lifelong learner / always curious
 
 i earn my bread <b>investing</b> and <b>trading</b> in financial markets, and help others through <b>financial planning</b>
 i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, beaches, and thayir sadam
@@ -9,6 +9,6 @@ i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-o
 i am a hardcore <b>golfer</b> and an avid <b>gamer</b> & <b>sports</b> fan
 i am a <b>book snob</b> and i also write a <b>newsletter</b>
 
-[advisory](https://adityag81.github.io/advisory/fiduciary.html) / [photography](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
+[photography](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591)
 
 <img src="https://avatars3.githubusercontent.com/u/13433335?s=400&u=45b2a2e007dd310ba581295892d77dcffc4ba866&v=4" STYLE="position:absolute;RIGHT:30px;BOTTOM:30px;HEIGHT:20%;WIDTH:auto;">
