--- a/books.html
+++ b/books.html
@@ -1,15 +1,17 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 # books that shaped my life
   
-  - The Unbearable Lightness of Being (and anything by Milan Kundera)
-  - The Soviet Chess Primer
-  - The Body Keeps the Score by B Van Der Kolk
-  - Lolita by V Nabakov
-  - Liar's Poker by Michael Lewis
-  - A Good Walk Spoiled by John Feinstein
-  - The Resistance Training Revolution by Sal Di Stefano
-  - Kafka on the Shore by H Murakami
-  - Under the Surface by Jan Markos
-  - Left Hand of Darkness by Ursula K Le Guin
-  - The Hitchhiker's Guide to the Galaxy by Douglas Adams
-  
+  - the unbearable lightness of being by milan kundera
+  - lolita by vladimir nabakov
+  - liar's poker by michael lewis
+  - a good walk spoiled by john feinstein
+  - kafka on the shore by haruki murakami
+  - the left hand of darkness by ursula k le guin
+  - the hitchiker's guide to the galaxy by douglas adams
+  - the market wizards by jack schwager
+  - the unplugged alpha by richard cooper
+  - the body keeps the score by bessel van de kolk
+  - the resistance training revolution by sal di stefano
+  - the soviet chess primer by ilya maizelis
+  - the elements of scoring by raymond floyd
+  - harvey penick's little red book by harvey penick
