--- a/books.html
+++ b/books.html
@@ -1,17 +1,25 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 # books that shaped my life
   
-  - the unbearable lightness of being by milan kundera
+  - bhagvad gita 
+  - kamasutra by vatyayana
+  - ramayana by ved valmiki
+  - mahabharata by ved vyasa
+  - pussy by delicious tavos
   - lolita by vladimir nabakov
+  - no more mr nice guy by glover
   - liar's poker by michael lewis
-  - a good walk spoiled by john feinstein
-  - kafka on the shore by haruki murakami
-  - the left hand of darkness by ursula k le guin
-  - the hitchiker's guide to the galaxy by douglas adams
+  - Hamlet by william shakespeare
+  - summer blonde by adrian tomine
   - the market wizards by jack schwager
   - the unplugged alpha by richard cooper
-  - the body keeps the score by bessel van de kolk
-  - the resistance training revolution by sal di stefano
+  - a good walk spoiled by john feinstein
+  - kafka on the shore by haruki murakami
   - the soviet chess primer by ilya maizelis
   - the elements of scoring by raymond floyd
+  - the body keeps the score by bessel van de kolk
+  - the left hand of darkness by ursula k le guin
   - harvey penick's little red book by harvey penick
+  - the unbearable lightness of being by milan kundera
+  - the hitchiker's guide to the galaxy by douglas adams
+  - the resistance training revolution by sal di stefano
