--- a/books.html
+++ b/books.html
@@ -5,7 +5,7 @@
   - kamasutra by vatyayana
   - ramayana by ved valmiki
   - mahabharata by ved vyasa
-  - pussy by delicious tavos
+  - pussy by delicious tacos
   - lolita by vladimir nabakov
   - no more mr nice guy by glover
   - liar's poker by michael lewis
