--- a/books.html
+++ b/books.html
@@ -1,25 +1,32 @@
 <script src="https://rawcdn.githack.com/oscarmorrison/md-page/master/md-page.js"></script><noscript>
 # books that shaped my life
   
-  - bhagvad gita 
+  - srimad bhagvad gita
   - kamasutra by vatyayana
   - ramayana by ved valmiki
+  - rapture by susan minot
   - mahabharata by ved vyasa
   - pussy by delicious tacos
   - lolita by vladimir nabakov
+  - ghost world by daniel clowes
   - no more mr nice guy by glover
   - liar's poker by michael lewis
   - Hamlet by william shakespeare
   - summer blonde by adrian tomine
+  - this is pleasure by mary gaitskill
   - the market wizards by jack schwager
   - the unplugged alpha by richard cooper
   - a good walk spoiled by john feinstein
   - kafka on the shore by haruki murakami
+  - when the body says no by dr gabor mate
   - the soviet chess primer by ilya maizelis
   - the elements of scoring by raymond floyd
+  - the old man and the sea by ernest hemingway
   - the body keeps the score by bessel van de kolk
   - the left hand of darkness by ursula k le guin
+  - golf is not a game of perfect by dr bob rotella
   - harvey penick's little red book by harvey penick
   - the unbearable lightness of being by milan kundera
+  - before the coffee gets cold by toshikazu kawaguchi
   - the hitchiker's guide to the galaxy by douglas adams
   - the resistance training revolution by sal di stefano
