--- a/books.html
+++ b/books.html
@@ -11,7 +11,7 @@
   - ghost world by daniel clowes
   - no more mr nice guy by glover
   - liar's poker by michael lewis
-  - Hamlet by william shakespeare
+  - hamlet by william shakespeare
   - summer blonde by adrian tomine
   - this is pleasure by mary gaitskill
   - the market wizards by jack schwager
