--- a/books.html
+++ b/books.html
@@ -28,5 +28,6 @@
   - harvey penick's little red book by harvey penick
   - the unbearable lightness of being by milan kundera
   - before the coffee gets cold by toshikazu kawaguchi
+  - reminiscences of a stock operator by edwin lefèvre
   - the hitchiker's guide to the galaxy by douglas adams
   - the resistance training revolution by sal di stefano
