--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ i earn my bread <b>investing</b> and <b>trading</b> in financial markets, and he
 i live in <b>madras</b>/<b>chennai</b>, a southern indian port city known for kutcheris, beaches, and thayir sadam
 i indulge in <b>photography</b> - street, abstract, & portraiture, as well as <b>vector</b> & <b>raster</b> art
 i am an advocate for <b>accessibility rights</b>, particularly the deaf & hard-of-hearing
-i play <b>squash</b>, <b>golf</b>, <b>billiards</b>, and <b>tabletop games</b>
+i play <b>squash</b>, <b>golf</b>, <b>billiards</b>, <b>tabletop games</b>, and <b>CrossFit HIIT</b> workouts
 i am a <b>book snob</b> and i also write a <b>newsletter</b>
 
 [photography](https://adityag.netlify.app) / [writing](https://buttondown.email/adityag) / [gaming](https://steamcommunity.com/profiles/76561197967142591) / [books](https://adityagovindaraj.github.io/books.html)
