--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<script type="module" src="https://md-block.verou.me/md-block.js"></script>
 # aditya g
 ### trusted fiduciary / financial planner / investor / trader / artist / gamer / writer / lifelong learner / always curious
 
