--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
+<script type="module" src="/node_modules/zero-md/dist/zero-md.min.js"></script>
+
 # aditya g
 ### trusted fiduciary / financial planner / investor / trader / artist / gamer / writer / lifelong learner / always curious
 
